_includes/assets/css/sass/_layout.scss
// Layout elements and grids

.with-bg {
  background-color: #fbf9fe;
}

/* layout */

.block {
  display: block;
}

.grid {
	display: grid;
}

.three--column--grid {
	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
	grid-gap: 5rem 2rem;
}

.four--column--grid {
	grid-template-columns: repeat(auto-fit, minmax(20%, 1fr));
	grid-gap: 2rem;
}

.flex {
	display: flex;
}

.flex--center-all {
	align-items: center;
  justify-content: center;
}

.flex--center-hor {
	align-items: center;
	text-align: center;
}

.flex--center-vert {
	justify-content: center;
}


.flex--column {
	flex-direction: column;
}

.divider {
	margin: 4rem 0;
	width: 100%;
}

.textual--content {
	max-width: 75ch;
}


.two--column-50 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4rem;

  @include breakpoint(43.750em) {
    grid-template-columns: 1fr 1fr;
  }
}

.featured--column-grid {
  align-items: start;
  grid-template-columns: 1fr;
  grid-gap: 4rem;

  @include breakpoint(43.750em) {
    grid-template-columns: 2fr 1fr;
  }
}

.featured--post {
  box-shadow: 0 2px 50px rgba(0,0,0,0.1);
  transition: box-shadow 250ms ease-in;

  &:hover {
    box-shadow: 0 2px 50px rgba(0,0,0,0.19);
  }

}

.featured--link {
  color: var(--base);
  text-decoration: none;
}

.featured--image {
  margin: 0;

  img {
    display: block;
  }

}

.featured--text {
  padding: 1.6875em 1.6875em 0;
}

.featured--summary {
  font-size: 1em;
}

.recent--posts {
  > div {
    display: grid;
    grid-gap: 2rem;
    // grid-auto-rows: minmax(auto, 120px);
  }

  //// !!! remmebr to put back when there are more posts

}

.recent--image {
  flex: 0 0 100px;
  margin-right: 1.5rem;

  img {
    height: 100px;
    object-fit: cover;
  }

}


.post--card {
  color: var(--base);
  text-decoration: none;

  h4 {
    color: var(--accent);
    line-height: 1.2;
  }

  &:hover {
    h4 {
      text-decoration: underline;
    }
  }

}

.post--type {
  margin-bottom: 10px;
  color: #5a4bad;
  font-size: 13px;
  text-transform: uppercase;
  font-weight: 600;
}

.recent--time {
  color: #7f7f7f;
  font-size: 14px;
  font-weight: 600;
}

.empty--posts {
  border: 1px dashed grey;
  max-width: 300px;
  padding: 1rem 1.5rem;

  p {
    margin: 0;
  }

}

// About page

.community--link {
  color: var(--base);
  font-size: 0.875rem;
  text-decoration: none;

  h3 {
    color: var(--accent);
    font-size: 22px;
  }

  &:hover {
    h3 {
      text-decoration: underline;
    }
  }

}

.organisation {
  color: var(--blue);
  font-weight: 600;

  &::after {
    content: " - ";
  }

}

time {
  color: var(--blue);

  + p {
    font-size: 1rem;
    padding-bottom: 1.5rem;
  }

}

.fod-logo {
  width: 145px;
  height: auto;
}

.show-svg {
  height: 270px;
}

.page-image {
  display: flex;
  grid-row: 1;
  justify-content: center;

  @include breakpoint(43.750em) {
    grid-column: 2;
  }

  svg {
    height: 200px;
    max-width: 100%;

    @include breakpoint(43.750em) {
      height: 260px;
    }

  }
}

// Shows

.list--shows {
  padding: 4rem 2rem 4rem 1.5rem;

  @include breakpoint(43.750em) {
    padding: 4rem 0;
  }
}

[data-current="shows"] {
  .list--shows {
    padding: 4rem 2rem 4rem 2.5rem;

    @include breakpoint(43.750em) {
      padding: 4rem 0;
    }
  }
}

.show--image {
  margin-block-end: 0;
  max-width: 300px;
}

.show--card {
  background-color: white;
  box-shadow: 0 2px 50px rgba(0,0,0,.19);
  max-width: 300px;
  position: relative;
  transform: skewY(-10deg);

  &::before {
    background: rgba(0, 0, 0, 0) linear-gradient(45deg, rgb(251, 213, 41), rgb(239, 239, 57)) repeat scroll 0% 0%;
    content: "";
    height: 4px;
    left: 0;
    position: absolute;
    top: 0;
    transition: 250ms all ease-in;
    transform: scale(0);
    width: 100%;
    z-index: -1;
  }

  &:hover {
    &::before {
      transform: scale(1);
    }
  }

}

.show--card-link {
  color: var(--blue);
  padding: 3rem 2rem 1.5rem;
  text-decoration: none;
  transform: skewY(10deg);
}

.show--card-number {
  color: var(--accent);
  position: absolute;
  font-weight: 600;
  top: -0.5rem;
  right: 5%;
}

.show--card-name {
  font-size: 1.4rem;
  line-height: 1.5;
  margin: 0;
}

.sub--title {
  display: block;
  font-weight: 400;
}

.show--summary {
  padding-top: 1rem;
}

.next--show {
  border: 1px dashed grey;
  max-width: 300px;
  position: relative;
  transform: skewY(-10deg);
}

.next--show-copy {
  display: flex;
  flex-direction: column;
  padding: 3rem 2rem 1.5rem;
  transform: skewY(10deg);
}

// Articles

.article--thumb {
  height: 150px;
  overflow: hidden;
  
  img {
    object-fit: cover;
  }

}



// Some browser resets

figure {
  margin: 0;
}

.box--shadow {
  box-shadow: 0 2px 50px rgba(0,0,0,0.1);

  &:hover {
    box-shadow: 0 2px 50px rgba(0,0,0,0.19);
  }

}

